[tool.poetry]
name = "URL Shortener v2"
version = "2.1.0"
description = "A URL-Shortener written in Python with FastAPI"
authors = ["Grant Ramsay (seapagan) <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.97.0"
alembic = "^1.11.1"
databases = "^0.7.0"
SQLAlchemy = "^1.4.48"
asyncpg = "^0.27.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.6"
PyJWT = "^2.7.0"
Jinja2 = "^3.1.2"
rich = "^13.4.2"
asyncclick = "^8.1.3.4"
anyio = "^3.7.0"
email-validator = "^1.3.1"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
validators = "^0.20.0"
gunicorn = "^20.1.0"

[tool.poetry.dependencies.fastapi-mail]
extras = ["httpx"]
version = "^1.2.7"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.21.1"

[tool.poetry.dependencies.passlib]
extras = ["bcrypt"]
version = "^1.7.4"

[tool.poetry.group.dev.dependencies]
openapi-readme = "^0.2.3"
aiosmtpd = "^1.4.4"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
